[gd_scene load_steps=7 format=3 uid="uid://bj3rq7d2c2alj"]

[ext_resource type="Script" path="res://src/snake/hud/HUD.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://drbmqe5fgckq2" path="res://addons/hood/Notifications.tscn" id="2"]
[ext_resource type="PackedScene" uid="uid://c1vqfi3lpr4kv" path="res://addons/hood/NotifLabel.tscn" id="3"]
[ext_resource type="PackedScene" uid="uid://cteyd3m5jameg" path="res://addons/hood/HudLabel.tscn" id="4"]
[ext_resource type="PackedScene" uid="uid://c223urhhg7xv3" path="res://addons/hood/NotifRichLabel.tscn" id="6"]
[ext_resource type="PackedScene" path="res://addons/hood/QuestStatus.tscn" id="7"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
alignment = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PanelContainer" type="PanelContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer/PanelContainer"]
layout_mode = 2

[node name="StepCount" parent="HBoxContainer/VBoxContainer/PanelContainer/VBoxContainer" instance=ExtResource("4")]
unique_name_in_owner = true
layout_mode = 2
text = "Steps: 700"

[node name="FoodCount" parent="HBoxContainer/VBoxContainer/PanelContainer/VBoxContainer" instance=ExtResource("4")]
unique_name_in_owner = true
layout_mode = 2
text = "Food: 7"

[node name="Speed" parent="HBoxContainer/VBoxContainer/PanelContainer/VBoxContainer" instance=ExtResource("4")]
unique_name_in_owner = true
layout_mode = 2
text = "Speed: 1"

[node name="ComboJuice" parent="HBoxContainer/VBoxContainer/PanelContainer/VBoxContainer" instance=ExtResource("4")]
unique_name_in_owner = true
layout_mode = 2
text = "Combo: 1"

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="QuestStatus" parent="HBoxContainer/MarginContainer/HBoxContainer/VBoxContainer" instance=ExtResource("7")]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 2

[node name="PanelContainer" type="PanelContainer" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="Notifications" parent="HBoxContainer/VBoxContainer2/PanelContainer" instance=ExtResource("2")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 2

[node name="NotifLabel" parent="HBoxContainer/VBoxContainer2/PanelContainer/Notifications" instance=ExtResource("3")]
visible = false
layout_mode = 2
text = "Notification"

[node name="NotifRichLabel" parent="HBoxContainer/VBoxContainer2/PanelContainer/Notifications" instance=ExtResource("6")]
layout_mode = 2
text = "Happy Notif"
